wip(scope) : in progress